chore: Optimize imports and clean up code after linting